discussion/kv_engine/155002/155002_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Explicitly start and stop the ExecutorPool

Explicitly start and stop the ExecutorPool from the memcached
core.

Change-Id: I364d0b4b08910fcff9955ce066b9d2ce409be84c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 20:52:29.000000000
Message: 
Uploaded patch set 9: Patch Set 8 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 21:35:32.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9611/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9611/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9611/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11187/ : FAILURE

Compile error at [2021-06-08T21:16:39.545Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11187/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11336/ : FAILURE

Compile error at [2021-06-08T21:14:25.375Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11336/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8209/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36568/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/154/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31247/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10258/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11607/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19190/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
